--- a/style.css
+++ b/style.css
@@ -1,48 +1,17 @@
-
-/* .nav-link{
-    background-color:  rgb(170, 205, 240);
-    color: black;
-    font-size: 20px;
-    padding: ;
-}
-
-
-
-nav{
-    background-color: rgb(170, 205, 240);
-    
-}
-
- h1{
-    text-align: center;
-    color: darkgreen;
-    font-size: 30px;
-    padding: 30px;
-    font-family: cursive;
-} 
-
-p{
-    font-size: 30px;
-
-} */
+/* Style sheet used in the Porfolio page such as Navbar, AboutMe and Projects divisions*/
 body{
     background-color: #ccc;
 }
-#header .a:hover{
-    color: blue;
+#Header a:hover{
+    background-color: rgb(48, 67, 133);
 
 }
-.navbar{
-    background-color: rgb(3, 31, 59);
-    
-}
+
 h2{
-    color: tomato;
+    color:white;
 
 }
-.navbar-toggler-icon{
-    color: tomato;
-}
+
 #bg-img{
     background: url('img/bg.jpg');
     background-size: 100%;
@@ -65,14 +34,18 @@ ul{
     color: white;
 
 }
-
-
+.nav-link{
+    font-size: 20px;
+    
+}
+#Projects{
+    background-color: #0aa3b8;
+    color:white;
+}
 .cardfooter {
     color: white;
 }
-#About span{
-    padding:20px;
+.intro{
+    font-size: 25px;
+    padding: 20px
 }
-/* .table {
-    background-color: rgb(17, 175, 223);
-} */
